--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-  overflow-y:auto;   /* ✅ scroll vertically */
+  overflow-y:visible;   /* ✅ scroll vertically */
   overflow-x:hidden; /* hide horizontal scroll */
 }
 
@@ -57,3 +57,4 @@ body {
 .content{ padding:20px; }
 .panel{ border:1px solid rgba(0,255,156,.2); border-radius:10px; padding:16px; background: rgba(0, 12, 8, .6); }
 .panel h2{ color:var(--green); }
+
