--- a/style.css
+++ b/style.css
@@ -108,3 +108,16 @@ body {
   text-align:center;
 }
 
+.custom-grid .row.split .image img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 6px;
+  border: 1px solid rgba(0,255,156,.25);
+  box-shadow: 0 0 8px rgba(0,255,156,.2);
+
+  /* Hacker CRT effect */
+  filter: grayscale(100%) contrast(1.2) brightness(0.8) sepia(1) hue-rotate(90deg) saturate(5);
+  image-rendering: pixelated;
+}
+
+
